# RAGEvalLab

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
examples/: basic_evaluation.py  config.yaml
rageval/: __init__.py  evaluator.py  pipeline.py
rageval/analysis/: __init__.py  bucketing.py  errors.py
rageval/chunking/: __init__.py  base.py  strategies.py
rageval/config/: __init__.py  experiment_config.py
rageval/embedding/: __init__.py  base.py  models.py
rageval/generation/: __init__.py  base.py  models.py
rageval/indexing/: __init__.py  base.py  faiss_index.py
rageval/metrics/: __init__.py  answer.py  retrieval.py
rageval/reranking/: __init__.py  base.py  models.py
tests/: __init__.py  test_analysis.py  test_bucketing.py  test_chunking.py  test_config.py  test_indexing.py  test_metrics.py
